--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,8 @@
         android:theme="@style/Theme.Tabuas"
         tools:targetApi="31">
         <activity
-            android:name=".Graph"
+            android:name=".activity.Graph"
             android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".activity.Graficos"
-            android:exported="false"
-            android:label="@string/title_activity_graficos"
-            android:theme="@style/Theme.Tabuas.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
